@@ -4,7 +4,7 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.config.Customizer; // <-- Add this import
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
@@ -14,9 +14,10 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource; // <-- Add this import
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource; // <-- Add this import
+import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
 
@@ -31,14 +32,15 @@ public class AppConfig {
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         return http
                 .csrf(csrf -> csrf.disable())
-                // Use Customizer.withDefaults() to look for the CorsConfigurationSource bean below
+                // 1. Tells Spring to use the 'corsConfigurationSource' bean defined below
                 .cors(Customizer.withDefaults()) 
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
-                        // 1. Explicitly allow preflight OPTIONS requests
+                        // 2. CRITICAL: Allow all OPTIONS (Preflight) requests globally
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                        // 2. Allow your signup/login endpoint (adjust path if different)
-                        .requestMatchers("/auth/**").permitAll() 
+                        // 3. Open your Auth endpoints (adjust paths if they are different)
+                        .requestMatchers("/auth/**", "/api/auth/**").permitAll() 
+                        // 4. Protect all other /api/ calls
                         .requestMatchers("/api/**").authenticated()
                         .anyRequest().permitAll()
                 )
@@ -49,16 +51,21 @@ public class AppConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration cfg = new CorsConfiguration();
-        // Exact match for Vercel (No trailing slash)
-        cfg.setAllowedOrigins(List.of("http://localhost:5173", "https://sarfaraj-ecommerce.vercel.app"));
-        cfg.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        cfg.setAllowedHeaders(List.of("Authorization", "Content-Type", "Accept"));
-        cfg.setAllowCredentials(true);
+        
+        // 5. Exact match for Vercel (No trailing slash!)
+        cfg.setAllowedOrigins(Arrays.asList(
+            "http://localhost:5173", 
+            "https://sarfaraj-ecommerce.vercel.app"
+        ));
+        
+        cfg.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        cfg.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "X-Requested-With", "Origin"));
+        cfg.setAllowCredentials(true); 
         cfg.setExposedHeaders(List.of("Authorization"));
-        cfg.setMaxAge(3600L);
+        cfg.setMaxAge(3600L); // Cache CORS for 1 hour
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", cfg); // Pass 'cfg' here
+        source.registerCorsConfiguration("/**", cfg);
         return source;
     }
 
